# Pipeline_ETL_Validating_Data

./: README.md  main.py  output.html  pyproject.toml  requirements.txt
src/: validation.py
