[project]
name = "pipeline-etl-validating-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Barros",email = "juliobarro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pipeline_etl_validating_data", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
